[gd_scene load_steps=2 format=3 uid="uid://c3b4a5t6l7e8u"]

[ext_resource type="Script" path="res://ui/battle_ui/battle_ui.gd" id="1_bui"]

[node name="BattleUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_bui")

[node name="TopPanel" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2

[node name="TurnOrderContainer" type="HBoxContainer" parent="TopPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="CommandMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -140.0
offset_right = 104.0
offset_bottom = -4.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CommandMenu"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="AttackButton" type="Button" parent="CommandMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Attack"

[node name="SkillButton" type="Button" parent="CommandMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Skill"

[node name="ItemButton" type="Button" parent="CommandMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Item"

[node name="DefendButton" type="Button" parent="CommandMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Defend"

[node name="FleeButton" type="Button" parent="CommandMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Flee"

[node name="SkillSubmenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 110.0
offset_top = -140.0
offset_right = 300.0
offset_bottom = -4.0
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="SkillSubmenu"]
layout_mode = 2

[node name="SkillList" type="VBoxContainer" parent="SkillSubmenu/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="ItemSubmenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 110.0
offset_top = -140.0
offset_right = 300.0
offset_bottom = -4.0
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="ItemSubmenu"]
layout_mode = 2

[node name="ItemList" type="VBoxContainer" parent="ItemSubmenu/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="TargetSelector" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Arrow" type="Label" parent="TargetSelector"]
offset_left = -8.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 14
text = ">"

[node name="PartyStatusPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -100.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PartyStatusPanel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="PartyRows" type="VBoxContainer" parent="PartyStatusPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="ResonanceGauge" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -140.0
offset_right = -4.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ResonanceGauge"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ResonanceGauge/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ResonanceLabel" type="Label" parent="ResonanceGauge/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Resonance"
horizontal_alignment = 1

[node name="ResonanceBar" type="ProgressBar" parent="ResonanceGauge/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
max_value = 150.0
show_percentage = false

[node name="ResonanceStateLabel" type="Label" parent="ResonanceGauge/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1.0, 1)
theme_override_font_sizes/font_size = 8
text = "Focused"
horizontal_alignment = 1

[node name="BattleLogPanel" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 28.0
offset_right = -4.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="BattleLog" type="RichTextLabel" parent="BattleLogPanel"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
theme_override_font_sizes/font_size = 8
scroll_following = true

[node name="VictoryScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VictoryScreen"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VictoryTitle" type="Label" parent="VictoryScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1.0, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Victory!"
horizontal_alignment = 1

[node name="VictoryExpLabel" type="Label" parent="VictoryScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "EXP: +0"

[node name="VictoryGoldLabel" type="Label" parent="VictoryScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Gold: +0"

[node name="VictoryItemsLabel" type="Label" parent="VictoryScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Items: None"

[node name="DefeatScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DefeatScreen"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="DefeatScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DefeatTitle" type="Label" parent="DefeatScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "Game Over"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="DefeatScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Retry"

[node name="QuitButton" type="Button" parent="DefeatScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Quit to Title"
